# Bypass-Library

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  TSecType.h  bypass-library.sln  bypass-library.vcxproj  bypass-library.vcxproj.filters  generic.cpp  generic.hpp  memory.cpp  memory.hpp
log/: log.cpp  log.h
nmco/: NMDataObject.h  NMSerializable.h
